--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "front-end-task",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://simasdei.github.io/task-frontend/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-countdown-now": "^2.1.0",
@@ -13,7 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages --prefix build"
   },
   "eslintConfig": {
     "extends": "react-app"
