--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "front-end-task",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://simasdei.github.io/task-frontend/",
+  "homepage": "https://simasdei.github.io/task-frontend",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "node-sass": "^4.11.0",
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages --prefix build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
